// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <Img> with isLoaded prop 1`] = `
<Img
  blur={2}
  image="image.jpg"
  isCached={true}
  isLoaded={true}
  opacity={0.9}
  scale={1}
>
  <styled.div
    blur={2}
    isCached={true}
    isLoaded={true}
    opacity={0.9}
    scale={1}
    style={
      Object {
        "backgroundImage": "url(\\"image.jpg\\")",
      }
    }
  >
    <div
      className="sc-bdVaJa dvevVe"
      opacity={0.9}
      scale={1}
      style={
        Object {
          "backgroundImage": "url(\\"image.jpg\\")",
        }
      }
    />
  </styled.div>
</Img>
`;

exports[`should render <Img> without isLoaded prop 1`] = `
<Img
  blur={2}
  image="image.jpg"
  isCached={false}
  isLoaded={false}
  opacity={0.9}
  scale={1}
>
  <styled.div
    blur={2}
    isCached={false}
    isLoaded={false}
    opacity={0.9}
    scale={1}
    style={
      Object {
        "backgroundImage": "url(\\"image.jpg\\")",
      }
    }
  >
    <div
      className="sc-bdVaJa klmwLC"
      opacity={0.9}
      scale={1}
      style={
        Object {
          "backgroundImage": "url(\\"image.jpg\\")",
        }
      }
    />
  </styled.div>
</Img>
`;
